[tool.poetry]
name = "bentoml-datadrift"
version = "0.1.0"
description = ""
authors = ["Ssuwani <jsuwan961205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bentoml = {extras = ["monitor-otlp"], version = "^1.3.9"}
scikit-learn = "^1.5.2"
fastapi = "^0.115.2"
evidently = "^0.4.38"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
